--- a/src/main/resources/templates/employee/employee.html
+++ b/src/main/resources/templates/employee/employee.html
@@ -40,7 +40,7 @@
                 <tr>
                     <th> Index</th>
                     <th> Image</th>
-                    <th> Employee Id</th>
+                    <th> Registeration Number</th>
                     <th> Calling Name</th>
                     <th> Mobile</th>
                     <th> Designation</th>
