--- a/src/main/resources/templates/user/addUserTeacher.html
+++ b/src/main/resources/templates/user/addUserTeacher.html
@@ -44,7 +44,7 @@
               <select id="selectParameter" class="form-control" tabindex="1" required >
                 <option value="" >Please select</option >
                 <option value="nic" >NIC Number</option >
-                <option value="RegistrationId" >Code</option >
+                <option value="RegistrationId" >Registration Number</option >
                 <option value="firstName" >First Name</option >
               </select >
             </div >
