--- a/src/main/resources/templates/batchStudent/showStudent.html
+++ b/src/main/resources/templates/batchStudent/showStudent.html
@@ -21,7 +21,7 @@
   </div >
   <div class="col-4" >
     <a href="/student" >
-      <button class="btn btn-primary" >Students On batch and New Student Add</button >
+      <button class="btn btn-primary" >Students</button >
     </a >
   </div >
 </div >
@@ -37,7 +37,7 @@
 <!--  </div >-->
 </div>
 </div>
-<div class="container" >
+<div class="container-fluid" >
   <div data-th-replace="~{student/student :: studentsFragment}" ></div >
 </div >
 
