--- a/src/main/resources/templates/batchExamResult/addBatchExamResult.html
+++ b/src/main/resources/templates/batchExamResult/addBatchExamResult.html
@@ -41,6 +41,7 @@
   <form action="/batchStudentExamResult" data-th-object="${batchExam}" method="post" >
     <div class="form-row" >
       <input class="form-control" data-th-field="*{id}" readonly type="hidden" >
+      <input class="form-control" data-th-name="${'examStatus'}" data-th-value="${addStatus==false?'RESULTED':'DETAIL'}" readonly type="hidden" >
       <input class="form-control" data-th-field="*{liveDead}" readonly type="hidden" >
       <div class="container-fluid" >
         <table class="table table-striped table-inverse table-responsive" >
