--- a/src/main/resources/templates/batchExam/batchExam-detail.html
+++ b/src/main/resources/templates/batchExam/batchExam-detail.html
@@ -24,19 +24,15 @@
 </div >
 <!--subject detail-->
 <div class=" row container-fluid" data-th-fragment="subjectDetail" >
-  <div class="col-sm-8" >
-    <div class="form-group" >
-      <label data-th-for="${id}" class="col-sm-3 control-label" >Index</label >
-      <div class="col-sm-6" >
-        <p type="text" id="id" class="form-control" data-th-text="${subjectDetail.id}" >
-      </div >
-    </div >
+  <div class="col-sm-6" >
     <div class="form-group" >
       <label data-th-for="${name}" class="col-sm-3 control-label" >Subject name</label >
       <div class="col-sm-6" >
         <p type="text" id="name" class="form-control" data-th-text="${subjectDetail.name}" >
       </div >
     </div >
+  </div >
+  <div class="col-sm-6" >
     <div class="form-group" >
       <label data-th-for="${code}" class="col-sm-3 control-label" >Subject code</label >
       <div class="col-sm-6" >
@@ -47,11 +43,26 @@
 </div >
 <!--teacher Detail-->
 <div class="container-fluid" >
-  <div data-th-replace="~{teacher/teacher-detail :: teacherDetailsFragment}" ></div >
+  <div class="row" >
+    <div class="col  text-center" >
+      <a class="btn btn-primary" data-toggle="collapse" href="#multiCollapseExample1" role="button"
+         aria-expanded="false"
+         aria-controls="multiCollapseExample1" >Teacher Details</a >
+    </div >
+  </div >
+  <div class="row" >
+    <div class="col" >
+      <div class="collapse multi-collapse" id="multiCollapseExample1" >
+        <div class="card card-body" >
+          <div data-th-replace="~{teacher/teacher-detail :: teacherDetailsFragment}" ></div >
+        </div >
+      </div >
+    </div >
+  </div >
 </div >
 <!--Exam Result-->
 <div class="container-fluid" >
-  <table class="table table-striped table-inverse table-responsive" >
+  <table class="table table-striped table-inverse " id="myTable" >
     <thead class="thead-inverse" >
     <tr >
       <th >Index</th >
@@ -63,7 +74,7 @@
     </tr >
     </thead >
     <tbody >
-    <tr data-th-each="batchStudentExamResult, index : ${batchExam.batchStudentExamResults}" >
+    <tr data-th-each="batchStudentExamResult, index : ${batchExamDetail.batchStudentExamResults}" >
       <td data-th-text="${index.count}" ></td >
       <td data-th-text="${batchStudentExamResult.batchStudent.student.firstName}" ></td >
       <td data-th-text="${batchStudentExamResult.code}" ></td >
