Exam batch student count show issue was fixed

--- a/src/main/resources/templates/batchExam/batchExam-detail.html
+++ b/src/main/resources/templates/batchExam/batchExam-detail.html
@@ -54,7 +54,7 @@
     <div class="col" >
       <div class="collapse multi-collapse" id="multiCollapseExample1" >
         <div class="card card-body" >
-          <div data-th-replace="~{teacher/teacher-detail :: teacherDetailsFragment}" ></div >
+          <div data-th-replace="~{teacher/teacher-detail :: teacherDetail}" ></div >
         </div >
       </div >
     </div >
