--- a/src/main/resources/templates/teacher/teacher-detail.html
+++ b/src/main/resources/templates/teacher/teacher-detail.html
@@ -25,7 +25,7 @@
   </div >
 </div >
 <!--teacherDetail detail-->
-<div class=" row container-fluid" data-th-fragment="teacherDetailsFragment" >
+<div class=" row container-fluid" data-th-fragment="teacherDetail" >
   <div class="col-6" style="background-color:palegreen;">
     <div class="row container-fluid">
     <div class="colspan-6 container" >
