--- a/src/main/resources/templates/timeTableStudentAttendance/addTimeTableStudentAttendance.html
+++ b/src/main/resources/templates/timeTableStudentAttendance/addTimeTableStudentAttendance.html
@@ -23,12 +23,7 @@
 </div >
 <div class="container" >
   <form action="/timeTableStudentAttendance" data-th-object="${timeTable}" method="post" >
-    <div class="form-group" data-th-if="${addStatus== false}" >
-      <label class="col-sm-3 control-label" data-th-for="${id}" >Index</label >
-      <div class="col-sm-9" >
-        <input type="text" readonly data-th-field="*{id}" id="id" placeholder="Index" class="form-control" autofocus >
-      </div >
-    </div >
+    <input type="hidden" readonly data-th-field="*{id}" id="id" placeholder="Index" class="form-control" autofocus >
     <div class="form-group" >
       <table class="table table-striped table-inverse table-responsive" >
         <thead class="thead-inverse" >
