--- a/src/main/resources/templates/timeTable/timeTableView.html
+++ b/src/main/resources/templates/timeTable/timeTableView.html
@@ -24,11 +24,8 @@
 <div class="container-fluid" >
   <div data-th-each="timeTableMap, indexOne : ${timeTableMaps}" >
     <div class="container-fluid bg-gradient-info" >
-      <form action="/timeTable/edit" method="post" class="text-center text-dark p-1 font-weight-bold">
-        <span data-th-text="${#temporals.format(timeTableMap.date, 'dd-MM-yyyy')}" ></span >
-        <input type="hidden" name="date" data-th-value="${timeTableMap.date}" class="date" >
-        <button type="submit" class="btn btn-warning btn-sm" >Edit</button >
-      </form >
+      <span data-th-text="${#temporals.format(timeTableMap.date, 'dd-MM-yyyy')}" ></span >
+
     </div >
     <div class="container-fluid" >
       <table class="table table-striped table-inverse table-responsive" >
@@ -57,7 +54,11 @@
             <a data-th-href="${'/timeTable/view/'+ timeTable.id}" >
               <button class="btn btn-info" >View</button >
             </a >
-            <a data-th-href="${'/timeTableStudentAttendance/'+ timeTable.id}" >
+            <form data-th-if="${#strings.equals(timeTable.timeTableStatus,'NOTMARKED')}" action="/timeTable/edit" method="post" class="text-center text-dark p-1 font-weight-bold">
+              <input type="hidden" name="date" data-th-value="${timeTableMap.date}" class="date" >
+              <button type="submit" class="btn btn-warning btn-sm" >Edit</button >
+            </form >
+            <a data-th-if="${#strings.equals(timeTable.timeTableStatus,'NOTMARKED')}" data-th-href="${'/timeTableStudentAttendance/'+ timeTable.id}" >
               <button class="btn btn-primary" >Attendance</button >
             </a >
           </td >
