--- a/src/main/resources/templates/batchExam/batchExam-detail.html
+++ b/src/main/resources/templates/batchExam/batchExam-detail.html
@@ -60,35 +60,77 @@
     </div >
   </div >
 </div >
+
 <!--Exam Result-->
-<div class="container-fluid" >
-  <table class="table table-striped table-inverse " id="myTable" >
-    <thead class="thead-inverse" >
-    <tr >
-      <th >Index</th >
-      <th >Student Name</th >
-      <th >Exam Code</th >
-      <th >Attendance</th >
-      <th >Mark</th >
-      <th >Result Grade</th >
-    </tr >
-    </thead >
-    <tbody >
-    <tr data-th-each="batchStudentExamResult, index : ${batchExamDetail.batchStudentExamResults}" >
-      <td data-th-text="${index.count}" ></td >
-      <td data-th-text="${batchStudentExamResult.batchStudent.student.firstName}" ></td >
-      <td data-th-text="${batchStudentExamResult.code}" ></td >
-      <td data-th-text="${batchStudentExamResult.attendanceStatus.attendanceStatus}" ></td >
-      <td data-th-text="${batchStudentExamResult.mark}" ></td >
-      <td data-th-text="${batchStudentExamResult.resultGrade.resultGrade}" >
-      </td >
-    </tr >
-    </tbody >
-  </table >
+<div class="container-fluid" id="printContent">
+  <div class="row">
+    <div class=" row container-fluid"  >
+      <div class="col-sm-6" >
+        <div class="form-group" >
+          <label data-th-for="${name}" class="col-sm-3 control-label" >Subject name</label >
+          <div class="col-sm-6" >
+            <p type="text"  class="form-control" data-th-text="${subjectDetail.name}" >
+          </div >
+        </div >
+      </div >
+      <div class="col-sm-6" >
+        <div class="form-group" >
+          <label data-th-for="${code}" class="col-sm-3 control-label" >Teacher Name</label >
+          <div class="col-sm-6" >
+            <p type="text"  class="form-control" data-th-text="${teacherDetail.name}" >
+          </div >
+        </div >
+      </div >
+    </div >
+  </div>
+  <div class="row" >
+    <table class="table table-striped table-inverse " id="myTable" >
+      <thead class="thead-inverse" >
+      <tr >
+        <th >Index</th >
+        <th >Student Name</th >
+        <th >Exam Code</th >
+        <th >Attendance</th >
+        <th >Mark</th >
+        <th >Result Grade</th >
+      </tr >
+      </thead >
+      <tbody >
+      <tr data-th-each="batchStudentExamResult, index : ${batchExamDetail.batchStudentExamResults}" >
+        <td data-th-text="${index.count}" ></td >
+        <td data-th-text="${batchStudentExamResult.batchStudent.student.firstName}" ></td >
+        <td data-th-text="${batchStudentExamResult.code}" ></td >
+        <td data-th-text="${batchStudentExamResult.attendanceStatus.attendanceStatus}" ></td >
+        <td data-th-text="${batchStudentExamResult.mark}" ></td >
+        <td data-th-text="${batchStudentExamResult.resultGrade.resultGrade}" >
+        </td >
+      </tr >
+      </tbody >
+    </table >
+  </div >
 </div >
+<!--Back Button-->
+<div class="form-group col-md-12 col-sm-12 mt-2 text-center flex-column " >
+  <a href="/batchExam" >
+    <button class="btn btn-dark" type="button" tabindex="3" >
+      <i class="fas fa-arrow-circle-left" style="font-size: 20px" ></i >&nbsp; &nbsp;Back
+    </button >
+  </a >
+  <!--print button-->
+  <button class="btn btn-success" type="button" id="printButton" >
+    <i class="fa fa-print" style="font-size: 20px" ></i >
+    Print
+  </button >
+</div >
+
 <!--footer is included-->
 <div data-th-replace="~{fragments/footer :: footerFragment}" ></div >
 <!--script is included-->
 <div data-th-replace="~{fragments/script :: scriptFragment}" ></div >
+<script >
+    $("#printButton").click(function () {
+        printContent("printContent");
+    });
+</script >
 </body >
 </html >
