Student time table was fixed

--- a/src/main/resources/templates/student/addStudent.html
+++ b/src/main/resources/templates/student/addStudent.html
@@ -129,7 +129,15 @@
           </div >
         </div >
       </div >
-      <div class="col-6" ></div >
+      <div class="col-sm-6" >
+        <!--email-->
+        <div class="form-group" >
+          <label class="col-6 control-label" data-th-for="${email}" >Email</label >
+          <div class="col-6" >
+            <input type="text" id="email" class="form-control" data-th-field="*{email}" >
+          </div >
+        </div >
+      </div >
     </div >
     <!--school-->
     <div class="form-group" >
