--- a/src/main/resources/templates/student/student-detail.html
+++ b/src/main/resources/templates/student/student-detail.html
@@ -54,7 +54,7 @@
         <div class="form-group">
             <label data-th-for="${address}" class="col-sm-3 control-label">Email</label>
             <div class="col-sm-6">
-                <p type="text" id="address" class="form-control"   data-th-text="${studentDetail.email}">
+                <p type="text" id="email" class="form-control"   data-th-text="${studentDetail.email}">
             </div>
         </div>
         <div class="form-group">
@@ -108,8 +108,7 @@
             </div>
         </div>
     </div>
-    </br><br>
-    <div class="row container-fluid" >
+    <div class="row container-fluid mt-3" >
         <div class="col-sm-4 col-sm-offset-2 align-middle" >
             <a href="/student" >
                 <button type="button" class="btn btn-danger btn-block" >Back</button >
