--- a/src/main/resources/templates/payment/payment.html
+++ b/src/main/resources/templates/payment/payment.html
@@ -20,11 +20,41 @@
         </a>
     </div>
 </div>
-
+<div class="container-fluid" >
+    <div class="row" >
+        <!--Custom Invoice search-->
+        <button type="button" class="btn btn-info btn-block text-capitalize" data-toggle="collapse"
+                data-target="#dataTargetCollapse"
+                aria-expanded="false" aria-controls="dataTargetCollapse"
+        > Custom Search
+        </button >
+        <div class="collapse mx-auto" id="dataTargetCollapse" >
+            <div class="container-fluid text-center" >
+                <div class="row" >
+                    <form class="form-inline" data-th-action="${'/payment'}" data-th-method="POST" >
+                        <div class="form-group mr-2" >
+                            <label for="startDate" >FROM :</label >
+                            <input class="form-control" id="startDate" name="startDate" type="date" />
+                        </div >
+                        <div class="form-group mr-2" >
+                            <label for="endDate" >TO :</label >
+                            <input class="form-control" id="endDate" name="endDate" type="date" />
+                        </div >
+                        <button class="btn btn-success mr-2" id="btnSummaryFind" type="submit" ><span
+                              class="glyphicon glyphicon-search" ></span >&nbsp;Search
+                        </button >
+                    </form >
+                </div >
+            </div >
+        </div >
+    </div >
+</div >
 <div class="row container-fluid">
-    <div class="col-1"></div>
-    <div class="col-10">
-        <table class="table table-striped table-inverse table-responsive container" id="myTable"  >
+    <div class="col mt-3" >
+        <p data-th-text="${message}" class="text-center bg-secondary text-white p-2" ></p >
+    </div >
+    <div class="container">
+        <table class="table table-striped table-inverse " id="myTable"  >
             <thead class="thead-inverse">
             <tr>
                 <th>Index</th>
@@ -36,7 +66,7 @@
             </tr>
             </thead>
             <tbody>
-            <tr data-th-each="payment, index : ${payments }">
+            <tr data-th-each="payment, index : ${payments}">
                 <td data-th-text="${index.count}"></td>
                 <td data-th-text="${payment.code}"></td>
                 <td data-th-text="${payment.amount}"></td>
@@ -50,7 +80,6 @@
             </tbody>
         </table>
     </div>
-    <div class="col-1"></div>
 </div>
 
 <!--footer is included-->
