--- a/src/main/resources/templates/payment/addAllBatchPayment.html
+++ b/src/main/resources/templates/payment/addAllBatchPayment.html
@@ -151,19 +151,19 @@
     </div >
   </div >
 
-  <div class="row container-fluid" >
-    <div class="col-sm-2 col-sm-offset-2" >
-      <a href="/payment" >
-        <button type="button" class="btn btn-danger btn-block" >Back</button >
-      </a >
+    <div class="row" >
+      <div class="col-4 text-right" >
+        <a href="/payment" >
+          <button type="button" class="btn btn-danger " >Back</button >
+        </a >
+      </div >
+      <div class="col-4 text-center" >
+        <button type="reset" class="btn btn-warning " >Clear Data</button >
+      </div >
+      <div class="col-4 text-left" >
+        <button type="submit" class="btn btn-success " >Submit</button >
+      </div >
     </div >
-    <div class="col-sm-2 col-sm-offset-2" >
-      <button type="reset" class="btn btn-warning btn-block" >Clear Data</button >
-    </div >
-    <div class="col-sm-2 col-sm-offset-2" >
-      <button type="submit" class="btn btn-success btn-block" >Submit</button >
-    </div >
-  </div >
 </form >
 <!--footer is included-->
 <div data-th-replace="~{fragments/footer :: footerFragment}" ></div >
